<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="@android:color/background_light"
    android:id="@+id/home_l">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="1,2,3,4,5,6,7,8,9,0,a,b,c,d,e,f,A,B,C,D,E,F"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Convert"
        android:id="@+id/convertBtn"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_alignParentTop="true"
        android:hint="@string/convertBtnHint"
        android:enabled="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/decLblText"
        android:id="@+id/decimalLbl"
        android:layout_below="@+id/editText"
        android:layout_marginTop="40dp"
        android:inputType="none"
        android:editable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/decAnswer"
        android:id="@+id/decAnswer"
        android:layout_alignTop="@+id/decimalLbl"
        android:layout_toEndOf="@+id/decimalLbl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/octAnswer"
        android:layout_alignStart="@+id/octAnswer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/octLblText"
        android:id="@+id/octLbl"
        android:layout_below="@+id/editText"
        android:layout_marginTop="80dp"
        android:inputType="none"
        android:editable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/octAnswer"
        android:id="@+id/octAnswer"
        android:layout_alignTop="@+id/octLbl"
        android:layout_toEndOf="@+id/hexLbl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/hexLbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hexLblText"
        android:id="@+id/hexLbl"
        android:layout_below="@+id/editText"
        android:layout_marginTop="120dp"
        android:inputType="none"
        android:editable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hexAnswer"
        android:id="@+id/hexAnswer"
        android:layout_alignTop="@+id/hexLbl"
        android:layout_toEndOf="@+id/hexLbl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/hexLbl" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/binLblText"
        android:id="@+id/binLbl"
        android:layout_below="@+id/editText"
        android:layout_marginTop="160dp"
        android:inputType="none"
        android:editable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/binAnswer"
        android:id="@+id/binAnswer"
        android:layout_alignTop="@+id/binLbl"
        android:layout_toEndOf="@+id/binLbl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/hexAnswer"
        android:layout_alignStart="@+id/hexAnswer" />


</RelativeLayout>
